<resources>
    <!--- Strings dos spinners -->
    <!--- Language -->
    <string-array name="Langauges">
        <item>Selecione</item>
        <item>Português</item>
        <item>Inglês</item>
        <item>Espanhol</item>
        <item>Alemão</item>
        <item>Francês</item>
    </string-array>
    <!--< Feedback -->
    <string-array name="Notas">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="app_name">Farol</string>
    <string name="navigation_drawer_open">Abrir Navigation Drawer</string>
    <string name="navigation_drawer_close">Fechar Navigation Drawer</string>
    <string name="nav_header_title">Farol</string>
    <string name="nav_header_subtitle">Bem Vindo!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <!-- String do menu navigationDrawer -->
    <string name="menu_dash">Dashboard</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_seila">Alguma Coisa</string>
    <string name="text_talk">TALK</string>

    <!-- Botões -->
    <string name="button_send_msg">Enviar</string>

    <!-- Menus -->
    <string name="text_feedback_title">Qualifique seu parceiro de estudo!</string>
    <string name="text_button_feedback">FeedBack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_text_feedback">Feedback</string>
    <string name="text_register_password">Password</string>
    <string name="text_register_email">Email</string>
    <string name="text_register_username">Como quer ser chamado?</string>
    <string name="text_register_button">Registrar</string>
    <string name="text_select_image_register">Foto</string>
    <string name="contatos">title_contacts_menu</string>
    <string name="logout">title_logout_menu</string>
    <string name="text_return_chat">voltar</string>
    <string name="menu_contacts">Contatos</string>
    <string name="text_return_contacts">voltar</string>
    <string name="text_activity_contacts">Contatos</string>
    <string name="nav_text_name_user">usuario</string>
    <string name="text_image_profile_select">Selecione Imagem</string>
    <string name="text_slogan">A luz pro seu estudo!</string>
    <string name="text_email_login">Email</string>
    <string name="text_password_login">Senha</string>
    <string name="text_language_contact">idoma</string>
    <string name="text_teach_or_no">teach</string>
    <string name="select_language">O que deseja treinar?</string>
    <string name="text_teacher_">Professor?</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>


</resources>
