<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="0dp"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:background="@drawable/texturafundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.slumdev.farol.RegisterActivity"  >

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_select_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/botao_foto"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/text_select_image_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/text_image_profile_select"
                android:textSize="20dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_user_register"
                android:layout_margin="10dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/button_select_image"
                app:layout_constraintEnd_toEndOf="@+id/button_select_image"
                app:layout_constraintStart_toStartOf="@+id/button_select_image"
                app:layout_constraintTop_toTopOf="@+id/button_select_image"/>

        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register_username"/>

        <EditText
            android:id="@+id/userName"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fundo_edit_text"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_height="40dp" />

        <TextView
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register_email"/>

        <EditText
            android:id="@+id/userEmail"
            android:textSize="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fundo_edit_text"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_height="40dp" />

        <TextView
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register_password"/>

        <EditText
            android:id="@+id/userPassword"
            android:textSize="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/fundo_edit_text"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_height="40dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Idioma Nativo"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/option_language_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Spinner>

        </LinearLayout>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_marginTop="20dp"
            android:text="@string/text_register_button"
            android:textSize="15dp"
            android:background="@drawable/efeitos_loginbutton"
            android:textColor="@android:color/white"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />



    </LinearLayout>


</LinearLayout>
</ScrollView>